Work on analog clock sequence animation

--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
 	  "type": "raw",
 	  "name": "ANALOG",
 	  "file": "analog.pdc"
-	}
+	},
+        {
+          "type": "raw",
+          "name": "ANALOG_SEQ",
+          "file": "analog_seq.pdc"
+        }
       ]
     }
   }
