Reformat code to my style

--- a/package.json
+++ b/package.json
@@ -19,16 +19,14 @@
     "watchapp": {
       "watchface": true
     },
-    "messageKeys": [
-      "dummy"
-    ],
+    "messageKeys": [],
     "resources": {
       "media": [
-	{
-	  "type": "raw",
-	  "name": "ANALOG",
-	  "file": "analog.pdc"
-	},
+        {
+          "type": "raw",
+          "name": "ANALOG",
+          "file": "analog.pdc"
+        },
         {
           "type": "raw",
           "name": "ANALOG_SEQ",
