--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "prebble",
   "author": "irek",
   "version": "1.3.0",
-  "keywords": ["pebble-watchface", "hackathon1", "prebble", "pRebble"],
+  "keywords": [
+    "pebble-watchface",
+    "hackathon1",
+    "prebble",
+    "pRebble"
+  ],
   "private": false,
-  "dependencies": {},
+  "dependencies": {
+    "pebble-clay": "^1.0.4"
+  },
   "pebble": {
     "displayName": "pRebble",
     "uuid": "f5a97a3e-4aa4-4a46-a8a1-ca590667b2d7",
@@ -19,7 +26,16 @@
     "watchapp": {
       "watchface": true
     },
-    "messageKeys": [],
+    "messageKeys": [
+      "BGTYPE",
+      "BGCOLOR",
+      "FGTYPE",
+      "FGCOLOR",
+      "FGBT",
+      "VIBEBT",
+      "VIBEH",
+      "DATE"
+    ],
     "resources": {
       "media": [
         {
